add system mp3 playback